added clear script

--- a/layouts/default-post.hbs
+++ b/layouts/default-post.hbs
@@ -15,6 +15,7 @@ light-silver v-mid">Freelance web developer</p>
 light-silver v-mid">{{formatDate date}}</p>
         </div>
       </div>
+      <h1 class="f2 mb2 black-80" id="title">{{title}}</h1>
       {{{content}}}
       <div class="w-100 flex flex-row flex-wrap justify-start content-between">
         <a href="" class="link bg-black-05 pa2 black-60 hover-bg-moon-gray br1">tag</a> <a href="" class="link bg-black-05 pa2 black-60 hover-bg-moon-gray br1">Design</a> <a href="" class="link bg-black-05 pa2 black-60 hover-bg-moon-gray br1">Google</a>
