--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -5,7 +5,7 @@
         <article class="mb3 ba b--black-10 bg-white tc pv2 flex flex-row flex-wrap items-center">
           <div class="w-100 db flex flex-row flex-wrap items-top">
             <svg class="dib ml3 mb2" idth="21" height="21" viewBox="0 0 21 21"><path d="M4.662 8.72l-1.23 1.23a1.753 1.753 0 0 0 .004 2.477l5.135 5.135c.7.693 1.8.688 2.48.005l1.23-1.23 5.35-5.346c.31-.31.54-.92.51-1.36l-.32-4.29c-.09-1.09-1.05-2.06-2.15-2.14l-4.3-.33c-.43-.03-1.05.2-1.36.51l-.79.8-2.27 2.28-2.28 2.27zm9.826-.98a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5z" fill-rule="evenodd"></path></svg>
-            {{#each tags}}<a href="#" class="underline-hover link f5 ph2 silver tl">{{this}}</a>{{/each}}
+            {{#each tags}}<a href="#" data-route="tags/{{this}}" class="underline-hover link f5 ph2 silver tl">{{this}}</a>{{/each}}
           </div>
           <div class="w-100 db flex flex-row flex-wrap">
             <div class="tc dib ml2">
