--- a/layouts/default-post.hbs
+++ b/layouts/default-post.hbs
@@ -19,7 +19,7 @@ light-silver v-mid">{{formatDate date}}</p>
       {{{content}}}
       <div class="w-100 flex flex-row flex-wrap justify-start content-between mb3">
         {{#each tags}}
-          <a href="" data-route="tags/{{this}}" class="link bg-black-05 pa2 black-60 hover-bg-moon-gray br1">{{this}}</a>
+          <a class="link pointer bg-black-05 pa2 black-60 hover-bg-moon-gray br1">{{this}}</a>
         {{/each}}
       </div>
     </article>
