--- a/_index.hbs
+++ b/_index.hbs
@@ -13,8 +13,8 @@
   <body>
     <div id="app"></div>
     <script type="text/javascript" src="bundle.js"></script>
-    {{#each scripts}}
+    {{!-- {{#each scripts}}
       <script type="text/javascript" src="{{this}}"></script>
-    {{/each}}
+    {{/each}} --}}
   </body>
 </html>
