defaults abstract to subtitle if present. fix #2

--- a/src/defaults/layouts/default.hbs
+++ b/src/defaults/layouts/default.hbs
@@ -39,7 +39,7 @@
           </div>
           <a data-route="{{slug}}" href="#" class="link f5 pa3 silver tl">
             <h3 class="mt1 mb3 f2 black-80 db w-100 tl">{{title}}</h3>
-            <img class="w-100 mw-100" alt="{{featuredImageDescription}}" src="{{featuredImage}}">
+            <p class="f4 lh-copy dark-gray georgia">{{abstract}}</p>
             Read more...
           </a>
         </article>
